--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.0.24"
-  },
-  "description": "An Ionic project"
+  }
+
 }
