--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "5.0.7",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "@vueuse/core": "^10.9.0",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
@@ -40,5 +41,4 @@
     "vitest": "^0.34.6",
     "vue-tsc": "^1.0.24"
   }
-
 }
